--- a/postit/package.json
+++ b/postit/package.json
@@ -14,7 +14,7 @@
   "private": true,
   "dependencies": {
     "@angular/common": "^14.0.0",
-    "@angular/core": "^14.0.0",
+    "@angular/core": "^14.1.1",
     "@angular/forms": "^14.0.0",
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
@@ -26,7 +26,10 @@
     "@capacitor/status-bar": "1.0.8",
     "@ionic/angular": "^6.1.9",
     "@ionic/lab": "^3.2.13",
+    "@mui/icons-material": "^5.8.4",
     "angular-epic-spinners": "^2.0.0",
+    "angular-material-sidenav": "^0.1.1",
+    "material-icons": "^1.11.9",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
