--- a/postit/package.json
+++ b/postit/package.json
@@ -22,9 +22,9 @@
     "@capacitor/android": "3.6.0",
     "@capacitor/app": "1.1.1",
     "@capacitor/core": "^3.6.0",
-    "@capacitor/haptics": "1.1.4",
-    "@capacitor/keyboard": "1.2.3",
-    "@capacitor/status-bar": "1.0.8",
+    "@capacitor/haptics": "^1.1.4",
+    "@capacitor/keyboard": "^1.2.3",
+    "@capacitor/status-bar": "^1.0.8",
     "@ionic/angular": "^6.1.9",
     "@ionic/lab": "^3.2.13",
     "@mui/icons-material": "^5.8.4",
@@ -45,7 +45,7 @@
     "@angular/compiler": "^14.0.0",
     "@angular/compiler-cli": "^14.0.0",
     "@angular/language-service": "^14.0.0",
-    "@capacitor/cli": "3.6.0",
+    "@capacitor/cli": "^3.7.0",
     "@ionic/angular-toolkit": "^6.0.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
